2000-12-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/NOTIFICATION-LOG-MIB: added (RFC 3014).

	* mibs/ietf/FR-MFR-MIB: added (RFC 3020).

2000-12-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.12.tar.gz: released version 0.2.12.

	* configure.in: Bill added --with-yyerror-verbose option.

	* lib/parser-smi.y: Patch from Bill: Reset capabilitiesModulePtr
	at the end of each module. Fixed typo in unsigned32. Fixed
	flawed data structures for Opaque as well. Removed a bunch of
	unnecessary setTypeParent() and setTypeDecl() calls.

2000-12-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed `GAUGE32 integerSubType' rule.

	* lib/parser-smi.y: Fixed flawed data structures in case of
	illegal range sub-typing of enum types and enum sub-typing of
	range restricted integer types. Thanks to Bill for the hints.

2000-11-30  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Juergen fixed some bugs and added some
	modifications changes to the recent smidump changes.

2000-11-29  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* win/config.h.in: Added to the distribution files.

	* libsmi-0.2.11.tar.gz: released version 0.2.11.

	* tools/dump-*.c: Now all smidump driver modules register their
	format drivers with smidump with an init_<format>() function.
	Additionally, we allow a driver to register format specific
	options. See dump-identifiers.c for a first small example.

	* tools/shhopt.[ch]: Added support for long options. Thanks
	to Sverre H. Huseby for his small and beatiful shhopt library.
	See http://shh.thathost.com/pub-unix/.
	
2000-11-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-*.c: Fixed some minor compiler warnings.

	* ltconfig: Updated to libtool 1.3.5.

	* win/GNUmakefile: Added this GNU makefile using the MSVC compiler
	contributed by Yigal Hochberg.

	* lib/check.c: Bill Fenner fixed wrong line numbers reported
	on TCs.

2000-11-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
